--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,8 +26,23 @@ jobs:
 #     - name: Run a one-line script
 #       run: echo Hello, world!
 
-    - name: LaTeX compilation
-      uses: dante-ev/latex-action@v0.2.0
+#     - name: LaTeX compilation
+#       uses: dante-ev/latex-action@v0.2.0
+      
+      name: Build LaTeX document
+      on: [push]
+      jobs:
+        build_latex:
+          runs-on: ubuntu-latest
+          steps:
+            - name: Set up Git repository
+              uses: actions/checkout@v1
+            - name: Compile LaTeX document
+              uses: dante-ev/latex-action@master
+              with:
+                root_file: CT Lecture - Discrete Systems/main.tex
+                working_directory: CT Lecture - Discrete Systems
+
 
 #     # Runs a set of commands using the runners shell
 #     - name: Run a multi-line script
