--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,25 +22,5 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: Discrete_Systems.pdf
-          path: Discrete_Systems/main.pdf
+          path: Discrete_Systems/
 
-
-
-
-# name: CI
-
-# on: [push]
-
-# jobs:
-#   latex-job:
-#     runs-on: ubuntu-latest
-#     name: A job to Compile Latex file
-#     steps:
-#     - uses: actions/checkout@v1
-#     - name: Compilation
-#       uses: vinay0410/tectonic-action@master
-#       env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#       with:
-#         tex_path: 'dir/file.tex'
-#         push: 'yes'
