build but not save artifacts

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,23 +1,23 @@
-# name: Build LaTeX document
+name: Build LaTeX document
 
-# on: 
-#   push:
-#   pull_request:
-#     branches:
-#       - master
+on: 
+  push:
+  pull_request:
+    branches:
+      - master
 
 
-# jobs:
-#   build_latex:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Set up Git repository
-#         uses: actions/checkout@v1
-#       - name: Compile LaTeX document
-#         uses: xu-cheng/latex-action@master
-#         with:
-#           root_file: main.tex
-#           working_directory: Discrete_Systems/
+jobs:
+  build_latex:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v1
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@master
+        with:
+          root_file: main.tex
+          working_directory: Discrete_Systems/
 #       - name: Save artifact
 #         uses: actions/upload-artifact@v1
 #         with:
