--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
+      - name: Set up git credentials
+        run: |
+          git config --global user.name 'PDF compiler'
+          git config --global user.email 'pdf-compiler@users.noreply.github.com'
 
       - name: Compile LaTeX document Discrete_Systems
         uses: xu-cheng/latex-action@master
@@ -25,3 +29,10 @@ jobs:
         with:
           root_file: main.tex
           working_directory: lecture_slides/Optimal_Control_of_LTI_systems/
+
+      - name: Push built pdfs
+        run: |
+          git add lecture_slides/Discrete_Systems/main.pdf
+          git add lecture_slides/Optimal_Control_of_LTI_systems/main.pdf
+          git commit -m "Add auto-compiled PDFs"
+          git push
