--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,18 @@ jobs:
           root_file: main.tex
           working_directory: lecture_slides/Optimal_Control_of_LTI_systems/
 
+      - name: Save Discrete_Systems artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: Discrete_Systems.pdf
+          path: lecture_slides/Discrete_Systems/main.pdf
+
+      - name: Save Optimal_Control_of_LTI_systems artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: Optimal_Control_of_LTI_systems.pdf
+          path: lecture_slides/Optimal_Control_of_LTI_systems/main.pdf
+
       - name: Update compiled PDFs in git repository
         if: github.event.pull_request.merged == true || (github.event_name == 'push' && github.ref == 'refs/heads/master')
         run: |
